# bevy_mod_atlas_loader

./: .gitignore  Cargo.toml  README.md
assets/: basic.atlas.ron
examples/: basic.rs  processed.rs  stack_overflow.rs
src/: lib.rs  loader.rs
