[package]
name = "bevy_mod_atlas_loader"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic"
required-features = ["bevy/bevy_winit"]

[[example]]
name = "processed"
required-features = ["processed_example_features"]

[features]
default = []

basic_example_features = ["bevy/bevy_winit"]

processed_example_features = [
    "bevy/multi_threaded",
    "bevy/asset_processor",
    "bevy/file_watcher",
    "bevy/bevy_winit",
]

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
    "png",
] }

ron = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
